--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,5 +5,6 @@ parameters:
     paths:
         - app/
 
-    # Level 9 is the highest level
-    level: 5
+    level: 9
+
+    checkMissingIterableValueType: false
