--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue": "^3.2.36"
     },
     "dependencies": {
+        "@meforma/vue-toaster": "^1.3.0",
+        "toastr": "^2.1.4",
         "vue-loader": "^17.0.1"
     }
 }
