--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -64,7 +64,7 @@ jobs:
           php artisan config:clear
           php artisan route:clear
       - name: Run tests
-        run: vendor/bin/phpunit --no-coverage --migrate-configuration
+        run: vendor/bin/phpunit --no-coverage
         env:
           DB_PORT: ${{ job.services.postgres.ports[5432] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
