--- a/.env.ci
+++ b/.env.ci
@@ -17,10 +17,10 @@ DB_PASSWORD=postgres
 LOG_CHANNEL=stack
 
 BROADCAST_DRIVER=redis
-CACHE_DRIVER=redis
-QUEUE_CONNECTION=redis
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
 
-SESSION_DRIVER=redis
+SESSION_DRIVER=file
 SESSION_LIFETIME=3600
 
 REDIS_CONNECTION=default
