--- a/.github/workflows/laravel-ci.yml
+++ b/.github/workflows/laravel-ci.yml
@@ -5,6 +5,10 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 10.x, 12.x, 14.x, 16.x, 18.x ]
+
     env:
       BROADCAST_DRIVER: log
       CACHE_DRIVER: redis
