--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Articles
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HDEU2Sigqh8BeEIcjfsyfftHXOVBUNx19lPEC8w/RWM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,17 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=article
-DB_USERNAME=article_user
+DB_DATABASE=articles
+DB_USERNAME=sail
 DB_PASSWORD=password
+
+CLICKHOUSE_HOST=clickhouse
+CLICKHOUSE_PORT=8123
+CLICKHOUSE_DATABASE=default
+CLICKHOUSE_USERNAME=default
+CLICKHOUSE_PASSWORD=
+CLICKHOUSE_TIMEOUT_CONNECT=2
+CLICKHOUSE_TIMEOUT_QUERY=2
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
